mass update of Social Changemakers website. added new files and images that is needed in some of the website pages

--- a/about-us.html
+++ b/about-us.html
@@ -67,6 +67,7 @@
 						<div class="inner">
 							<h1>Our Story</h1>
 							<p>We promote equity & inclusion across Canada. We are building a community of youth that support each other, network, grow and learn together as we all word to address thee social problems that exist in our world, and create a more accepting, inclusive society.</p>
+							<p>Social Changemakers is an initiative of Harmony Movement. For more information,<br>visit <a href="http://harmony.ca">Harmony Movement</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -74,28 +75,71 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="one" class="wrapper style1 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/staff.png" alt="" data-position="center center" /></a>
-							<div class="content">
+							<!--<a href="#" class="image" style="background-repeat: no-repeat;"><img src="images/staff.png" alt="" data-position="center center"/></a>  -->
+							<div class="content" style="width: max-content;">
 								<div class="inner">
 									<h2>Our Team</h2>
 									<p>Social Changemakers are youth leaders from across Canada who are working towards creating positive social change, nationally and globally. Through the Harmony Movement-Social Changemakers Program youth are trained to critically analyze the world they live and given the tools to learn how to identify current issues, create inativites,  and take action.</p>
+									<h4>Meet the Social Changemakers Team</h4>
+									<p>Meet the team that makes the youth empowered, grow, network and learn together.</p>
+									<table>
+										<tr style="background-color: transparent; border: none;">
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF5yIbijc4&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"> </iframe>
+												</div>
+											</td>
+											<td style="width: 50px"/>
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+												 	<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF566O_Ico&#x2F;Xc0VFJkxflqaBP2fxOWRtA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF5yIv2WIs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">	</iframe>
+											  </div>
+											</td>
+										</tr>
+										<tr style="background-color: transparent; border: none;">
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+  													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF56w5qars&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"> </iframe>
+												</div>
+											</td>
+											<td style="width: 50px"/>
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+  													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF5693jauw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"> </iframe>
+												</div>
+											</td>
+											<td style="width: 50px"/>
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF56xMQX-w&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"> </iframe>
+												</div>
+											</td>
+										</tr>
+									</table>
 								</div>
 							</div>
 						</section>
-						<section>
+						<!-- <section style="min-height: 15em;">
 							<div class="content">
 								<div class="inner">
-									<p>Social Changemakers is an initiative of Harmony Movement, for more information visit <a href="http://harmony.ca">Harmony Movement</a></p>
 								</div>
 							</div>
-							<a href="#" class="image"><img src="images/HM_icon.png" alt="Harmony Movement" data-position="top center" /></a>
-						</section>
+							<img src="images/HM_black.png" alt="Harmony Movement" data-position="center center" style="width: 50%; height: 50%; display: flex; justify-content: center; flex-direction: column; padding: 5em 5em 2em 5em ; box-sizing: inherit;"/>
+							<div style="display: flex; justify-content: center;">
+							</div>
+							</section> -->
 					</section>
 
 						<!-- Two -->
-							<section id="two" class="wrapper style1 spotlights">
+							<section id="two" class="wrapper style2 spotlights">
 									<section>
 										<a href="#" class="image"><img src="images/philosophy.png" alt="" data-position="top center" /></a>
 										<div class="content">
@@ -112,7 +156,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
