--- a/activities.html
+++ b/activities.html
@@ -91,7 +91,7 @@
 					</section>
 
 					<!-- Four -->
-					<section id="four" class="wrapper style1 fade-up">
+					<section id="four" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Social Changemakers Conference</h2>
 							<p>Delivered completely online, this immersive conference series will bring together young leaders from across Canada from a range of backgrounds, faiths, abilities, genders, sexual orientations, including Indigenous and Francophone youth.</p>
@@ -99,10 +99,10 @@
 						</div>
 					</section>
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
