--- a/blog.html
+++ b/blog.html
@@ -44,24 +44,94 @@
 				</nav>
 			</header>
 
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Blogs</a></li>
+							<li><a href="#one">Inclusion Matters</a></li>
+							<li><a href="#two">Isn’t it worth advocating for ALL types of diversity?</a></li>
+							<li><a href="#three">Educating today’s youth to create a more inclusive tomorrow: Creating an “Inclusivity Carnival”</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 class="major">Blog</h1>
-							<p> Coming soon! </p>
+							<h1 class="major">Blogs</h1>
+							<p>Our team of vibrant facilitators and volunteers share different experiences and activities in their community.</p>
+							<p>Do you have any stories to share? Email your stories at <a href="mailto:info@harmony.ca">info@harmony.ca</a>.</p>
 						</div>
 					</section>
+
+				<!-- One -->
+					<section  id="one" class="wrapper style1 spotlights">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Inclusion Matters</h2>
+									<h3>by Keira Savin</h3>
+									<p style="text-align: center;"><img src="images/Diversity logo.png" alt="" width="186" /><img src="images/Inclusion Matters.jpg" alt="" width="621" /><img src="images/HIC shirt.jpg" alt="" width="204" /></p>
+									<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;line-height:normal;'><strong><em><span style="font-size:19px;">Is it even possible to make inclusion the norm in all societies around the globe? &nbsp;</span></em></strong></p>
+									<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><span style="font-size:16px;">There has always been a strong bond between the diverse members of my family. From the perspective of outsiders, we couldn&rsquo;t possibly all belong to the same family because of the many types of diversity that our represented within just 3 generations of my immediate family. &nbsp;My family includes 3 races and 4 bi-racial children, 3 religions, 3 genders, 3 neuro-atypicals, 3 people with physical impairments, Indigenous ancestry, and cultural diversity from at least 8 countries. &nbsp;Many of my loved ones have been victims of discrimination because of their diversity, and most have been driven to become advocates for equity, diversity and inclusion.<strong><em>&nbsp;If a family this rich in diversity is motivated to fight for the rights of marginalized people, can other families like mine be enough to make a difference globally? &nbsp;</em></strong>&nbsp; &nbsp;</span></p>
+									<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">As a child, do you remember a time when your family members or groups to which your parents belonged made comments that biased you towards other groups? Do you hold these beliefs now? If not, what changed your opinion?</span></em></strong></p>
+									<p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><span style="font-size:16px;">If people develop their <strong><em>personal biases</em></strong> through their experiences with their family and the community groups to which they belong, we should consider that these biases can only be eradicated if we start <strong><em>raising open-minded children</em></strong> who accept all other people unconditionally. When children and youth realize the value of diverse perspectives, only then will they become adults who embrace all aspects of diversity, equity and inclusion. It is important <strong><em>to create an early learning framework</em></strong> to teach children about inclusion in a fun way. While brainstorming ideas to accomplish this goal, I conceived the &ldquo;Inclusivity Carnival.&rdquo; &nbsp;Through free carnival games, children can learn about various aspects of all types of human diversity including but not limited to ethnicities, religions, genders, neuro-divergence, physical impairments, body types, Indigenous Peoples heritage and more. While having fun playing games or solving puzzles, children and their parents have an opportunity to learn about diversity via open dialogue with youth volunteers from various city organizations. By <strong><em>fostering a safe space</em></strong> to discuss issues related to diversity and inclusion, families can freely ask questions or request resources. This carnival platform also creates a space for <strong><em>collaboration between youth volunteers</em></strong> from diverse, and sometimes divergent backgrounds. &nbsp;<strong><em>Any changemaker who needs help to create an &ldquo;Inclusivity Carnival&rdquo; in their city can reach out to me&nbsp;</em></strong>at @hamiltoninclusivitycarnival &nbsp;or send a DM via&nbsp;</span><a href="https://www.facebook.com/groups/640728044235236"><span style='font-family:"Arial",sans-serif;'>https://www.facebook.com/groups/640728044235236</span></a></p>
+								</div>
+							</div>
+						</div>
+					</section>
+
+				<!-- Two -->
+				<section  id="two" class="wrapper style2 spotlights">
+					<div class="inner">
+						<div class="content">
+							<div class="inner">
+								<h2>Isn’t it worth advocating for ALL types of diversity?</h2>
+								<h3>by Keira Savin</h3>
+								<p style="text-align: center;"><img src="images/Hamilton Inclusivity Logo.jpg" alt="" width="1000" /></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><span style="font-size:16px;">When &ldquo;<strong>nature vs nurture</strong>&rdquo; was conceptualized, it explained how all people are a <strong><em>beautiful blend</em></strong> of both their <strong><em>genetic composition</em></strong> and the <strong><em>environment that surrounds them</em></strong>. Their personal identity is a unique combination of their <strong><em>various positions within each spectrum</em></strong> for EVERY type of human diversity. Whether it&apos;s the amount of pigment which determines their skin color, the brain connectivity which affects neuro-typical to neuro-divergent thinking, or the amount of testosterone which influences their gender identity, genetic diversity is multi-factorial. &nbsp;Comparably, our personal ideologies are determined by the intersectionality of family values, childhood upbringing and devotion to community groups. The environment in which we were raised can affect how people&rsquo;s lives are influenced by their culture, heritage, religion, sexual orientation and more. However, our position on various spectrums of these are also determined by our individual willingness to assimilated to cultural traditions or to religious constraints, our desire for support and belonging, our preferences for companionship, our pliability to be persuaded by others and many other intrinsic and extrinsic factors. When considering the importance of all genetic and environmental factors which create human diversity, it seems counterproductive to advocate for just one type of diversity, at the exclusion of all others. &nbsp;A person feels most valued if they are accepted &ldquo;<strong><em>just as they are</em></strong>&rdquo; by both self and the society in which they live. &nbsp;</span></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">Do school clubs which assemble and support like-minded students help society in general, or do they inadvertently propagate narrow-mindedness? &nbsp;Do you think that your group of friends influence your personal biases? &nbsp;When you hear someone in your friend group making a derogatory comment about someone else, do you speak out against their comment? Or do you remain silent because you fear being rejected by your friend group?</span></em></strong></p>
+								<p style="text-align: center;"><img src="images/diversity.jpg" alt="" width="500" /></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;"><span style='font-size:16px;font-family:"Aptos",sans-serif;'>We need youth changemakers to create a world where all people feel accepted, respected and valued. &nbsp;<strong>Be the change.</strong></span></span></em></strong></p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- Three -->
+				<section  id="three" class="wrapper style1 spotlights">
+					<div class="inner">
+						<div class="content">
+							<div class="inner">
+								<h2>Educating today’s youth to create a more inclusive tomorrow: Creating an “Inclusivity Carnival” </h2>
+								<h3>by Keira Savin</h3>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><span style="font-size:16px;">With widespread inclusion mandates, why is discrimination still so prominent? The discrimination affecting my family has me concluding that many authoritarians still have personal biases which affect many aspects of our society, including <strong><em>opportunities</em></strong> for jobs, teams, and volunteerism. <strong><em>To promote inclusivity, an early learning framework needs to be implemented in all communities to teach children to embrace the entire spectrum of human diversity, so that they grow-up accepting others unconditionally</em></strong>. Although I have always been outspoken against discrimination, I became more committed to my <strong>humanitarian efforts</strong> in December 2022, when <strong><em>I conceived the &ldquo;Inclusivity Carnival&rdquo;, while brainstorming ideas which could generate a long-term impact for promoting inclusion globally.</em></strong></span></p>
+								<p style="text-align: center;"><img src="images/HIC poster -ledger size.jpg" alt="" width="750" /></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">I spearheaded the &ldquo;Hamilton Inclusivity Carnival&rdquo; to engage CHILDREN in fun activities where ALL types of human diversity could be celebrated in ONE EVENT.</span></em></strong><span style="font-size:16px;">&nbsp;<strong><em>&nbsp;I spent over 450 hours creating this city-wide carnival</em></strong> which occurred first occurred in August 2023. To <strong><em>optimize the event&rsquo;s sustainability</em></strong>, I borrowed many reusable supplies and prioritized electronic communication and promotion. <strong><em>I was also responsible</em></strong> for recruiting and corresponding with volunteers, designing booths and games, budgeting and fundraising, communicating with city officials and organizations, and for leading the volunteers on carnival day.&nbsp;</span></p>
+								<p style="text-align: center;"><img src="images/Carnival layout example.jpg" alt="" width="750" /></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><span style="font-size:16px;">On event-day, the &ldquo;<em>Hamilton Inclusivity Carnival&rdquo; depicted</em> many facets of human diversity with colorful booths, a multitude of fun games, and volunteers outfitted to represent their diversity type. With fifteen booths and over thirty interactive games, nearly 100 children <strong><em>experienced various aspects of different ethnicities, religions, physical impairments, gender diversity, neurodivergence, Indigenous heritage, and more</em></strong>. In partnership with a festival venue for the <strong><em>Colombian Refugees Association</em></strong>, my carnival demonstrated that diverse people can generate innovative experiences, and we did so while providing entertainment for children.<strong><em>&nbsp;I had also invited children from many diverse groups within my city&nbsp;</em></strong>and designed games for participants who could not speak or read English, like new immigrants or language-impaired children.<strong><em>&nbsp;</em></strong> Conscientious of the children&rsquo;s varying ages, and physical and intellectual abilities, I ensured that <strong><em>each booth offered a choice of games and puzzles</em></strong>. With no fees and an<strong><em>&nbsp;accessible</em></strong> park location for those with mobility impairments, <strong><em>my event allowed ALL families to participate</em></strong></span></p>
+								<p style="text-align: center;"><img src="images/Carnival volunteers 2023.jpg" alt="" width="750" /></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">The &ldquo;Hamilton Inclusivity Carnival&rdquo; was successful at celebrating the best of humanity.</span></em></strong><span style="font-size:16px;"> While community groups were grateful to teach about their particular type of diversity, the children and parents had fun playing games and learning about the benefits of diverse perspectives. The <em>City of Hamilton</em> officials and sponsors were impressed <strong><em>by my humanitarian effort which educated and entertained children while producing collaboration between many diverse organizations</em></strong>. My carnival created a sustainable impact on the children who were encouraged to become humanitarians and <strong><em>long-term inclusivity advocates</em></strong>, breaking the cycle of discrimination. For me, it is imperative to continue organizing the <strong><em>&rdquo;Hamilton Inclusivity Carnival&rdquo; annually,&nbsp;</em></strong>and to <strong><em>inspire youth from different cities to create their own &ldquo;Inclusivity Carnival</em></strong>&rdquo;, hopefully propagating this platform worldwide. Overall, the &ldquo;Inclusivity Carnival&rdquo; successfully created the early learning framework for inclusion, building towards a future with equal opportunities for all people.</span></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">&nbsp;</span></em></strong></p>
+								<p style='margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;font-size:11.0pt;font-family:"Aptos",sans-serif;'><strong><em><span style="font-size:16px;">For help in organizing an Inclusivity Carnival in your city, please contact me at</span></em></strong><span style="font-size:16px;">&nbsp;</span><a href="mailto:inclusivity.carnival@gmail.com"><span style='font-family:"Arial",sans-serif;'>inclusivity.carnival@gmail.com</span></a><span style='font-family:"Open Sans";color:#0070C0;'>&nbsp;</span></p>
+							</div>
+						</div>
+					</div>
+				</section>
 
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
