--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,7 @@
 
 			gtag('config', 'UA-41573105-3');
 		</script>
-		<title>About Us - Social Changemakers</title>
+		<title>Contact Us - Social Changemakers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,7 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style2">
 						<div class="inner">
 							<h1 class="major">Contact Us</h1>
 
@@ -103,10 +103,10 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
