--- a/clubs.html
+++ b/clubs.html
@@ -48,7 +48,7 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style2">
 						<div class="inner">
 							<h1 class="major">Clubs</h1>
 							<video width="100%" autoplay muted controls>
@@ -83,10 +83,10 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
