--- a/resources.html
+++ b/resources.html
@@ -49,10 +49,10 @@
 					<div class="inner">
 						<nav>
 							<ul>
-								<li><a href="#one">Issue Fact Sheets</a></li>
-								<li><a href="#two">Video Resources</a></li>
-								<li><a href="#three">Storytelling Resources</a></li>
-								<li><a href="#four">Action Planning Resources</a></li>
+								<li><a href="#one">Issue Resource Banks</a></li>
+								<li><a href="#two">Action Planning Resources</a></li>
+								<li><a href="#three">Action Planning Modules</a></li>
+								<li><a href="#four">Storytelling Resources</a></li>
 								<li><a href="#five">Action Planning Templates</a></li>
 								<li><a href="#six">Mental Health Resources</a></li>
 							</ul>
@@ -60,45 +60,169 @@
 					</div>
 				</section>
 
-			<!-- Wrapper -->
+				<!-- Wrapper -->
 				<div id="wrapper">
 
 					<!-- One -->
-						<section id="one" class="wrapper style1 fade-up">
-							<div class="inner">
-								<div class="content">
-									<div class="inner">
-										<h2>We are continuously working to expand our resources.</h2>
-										<p>Got a resource you think should be included? Or looking for something specific? Email info@harmony.ca.</p>
+					<section id="one" class="wrapper style1-alt fade-up">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Issue Resource Banks</h2>
+									<p>Use this to inform, discuss and take action on the different issues in school. We encourage to read, watch, listen or follow these organizations, videos and influencers.</p>
+									<p>These resource banks are a tool for discussion. We do not endorse their content. Information provided may also change over time. If you have a resource to add or have a concern, email <a href="mailto:info@harmony.ca">info@harmony.ca</a>.</p>
+									<p>Want help or more resources? <a href="/contact-us.html" target= _blank>Contact us</a>.</p>
+									<table style="text-align: center;">
+										<tr style="background-color: transparent; border: none;">
+											<!-- Anti-Racism -->
+											<td>
+												<div style="border: none; position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="border: none; position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF_oGo7q9s&#x2F;kHI_joJzYHPHJx23IrvlDg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<!-- Sexism -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF80rlz-j4&#x2F;XlV81Jh5VfrEOJ-0cZl6nA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+												</div>
+											</td>
+											<td style="width: 50px"/>
+										</tr>
+										<tr style="background-color: transparent; border: none;">
+											<!-- Ableism -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+												 	<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF86K6yGCE&#x2F;pOhZ1pSpkuzJt7nBgjMMFQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<!-- Anti-Black Racism -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF9woBq1Jo&#x2F;CvltsNhKJk6GXx69MMJ_IA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+										</tr>
+										<tr style="background-color: transparent; border: none;">
+											<!-- Anti-Asian Racism -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-OjKhgGU&#x2F;lDOdxN0kXRwyvR2ZQzG_jw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<!-- Islamophobia -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-OltJiEA&#x2F;lXNxkCsAFsMeR3-SVt7wOg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+										</tr>
+										<tr style="background-color: transparent; border: none;">
+											<!-- 2SLGBTQ+ -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-OtBJwPs&#x2F;OpDWSkerMETFpykwP_Vs4w&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<!-- Antisemitism -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-Ou1-Om4&#x2F;qyWDfVoBKWsPKDm_RqvhBg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+										</tr>
+										<tr style="background-color: transparent; border: none;">
+											<!-- Indigenous Reconciliation -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF-Ov44wT0&#x2F;BnCKLVgCZddNDkrpAnD6LA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+											   </div>
+											</td>
+											<td style="width: 50px"/>
+											<!-- Body Image -->
+											<td>
+												<div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+  													<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBCEdsX7k&#x2F;g5wOOBh73xnbqO017a-M8Q&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+												</div>
+											</td>
+										</tr>
+									</table>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- Two -->
+					<section id="two" class="wrapper style2 fade-up">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Action Planning Resources</h2>
+									<h4>Looking for more Action Planning resources and support? <a href="clubs.html">Join the Social Changemakers Network!</a></h4>
+									<table>
+										<tr>
+											<td><a href="https://drive.google.com/file/d/1edCsHR4LEqt1prPMB6Td_n5MWH5bu6je/view?usp=sharing" target= _blank>Social Changemakers Action Kit</a></td>
+											<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1LTJXNRt6NVR0afPtmyTcRK6yjg52qEU5zAdg2AJXFL0rQw/viewform?usp=sf_link" target= _blank>School Climate Survey</a></td>
+										</tr>
+										<tr>
+											<td><p>Download this free kit which includes info on setting up a club, strategy planning, communications, fundriasing, and sample initiatives to create social change.</p></td>
+											<td><p>This survey will help you identify issues around discrimination in your school. It can be filled in as individuals or as a group together. Email info@harmony.ca to request a report from all the participants who submit.</p></td>
+										</tr>
+									</table>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- Three -->
+					<section id="three" class="wrapper style1-alt fade-up">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Action Planning Modules</h2>
+									<p>We are continuously working to expand our resources.</p>
+									<p>Got a resource you think should be included? Or looking for something specific? <a href="/contact-us.html" target= _blank>Contact us</a>.</p>
+									<!-- 
+									<p>The Leadership Program Guide provides a plan that would assist current and aspiring leaders to foster an action-oriented mindeset for social change.</p>
+									<p><a href="https://docs.google.com/document/d/1ZDC_LjKnbLD6F1RIS_G-iiesejTEq1rGiPxyQIK-piY/edit?usp=sharing" target= _blank class="button">Social Changemakers Leadership Program Guide</a></p>
+									<p><a href="https://drive.google.com/drive/u/1/folders/1TctmDEOdTMgFutpAQU2IhfjNxNtoIXIt?exids=71471483,71471477" target= _blank class="button">Social Changemakers Leadership Program Modules</a></p>
+									 -->
 								</div>
 							</div>
 						</div>
 					</section>
 
 					<!-- Four -->
-						<section id="four" class="wrapper style1 fade-up">
-							<div class="inner">
-								<div class="content">
-									<div class="inner">
-										<h2>Action Planning Resources</h2>
-										<h4>Looking for more Action Planning resources and support? <a href="clubs.html">Join the Social Changemakers Network!</a></h4>
-											<table>
-												<tr>
-													<td><a href="https://drive.google.com/file/d/1edCsHR4LEqt1prPMB6Td_n5MWH5bu6je/view?usp=sharing" target= _blank>Social Changemakers Action Kit</a></td>
-													<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1LTJXNRt6NVR0afPtmyTcRK6yjg52qEU5zAdg2AJXFL0rQw/viewform?usp=sf_link" target= _blank>School Climate Survey</a></td>
-												</tr>
-												<tr>
-													<td><p>Download this free kit which includes info on setting up a club, strategy planning, communications, fundriasing, and sample initiatives to create social change.</p></td>
-													<td><p>This survey will help you identify issues around discrimination in your school. It can be filled in as individuals or as a group together. Email info@harmony.ca to request a report from all the participants who submit.</p></td>
-												</tr>
-											</table>
+					<section id="four" class="wrapper style2 fade-up">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Storytelling Resources</h2>
+									<p>We are continuously working to expand our resources.</p>
+									<p>Got a resource you think should be included? Or looking for something specific? <a href="/contact-us.html" target= _blank>Contact us</a>.</p>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- Five -->
+					<section id="five" class="wrapper style1-alt fade-up">
+						<div class="inner">
+							<div class="content">
+								<div class="inner">
+									<h2>Action Planning Templates</h2>
+									<p>We are continuously working to expand our resources.</p>
+									<p>Got a resource you think should be included? Or looking for something specific? <a href="/contact-us.html" target= _blank>Contact us</a>.</p>
 								</div>
 							</div>
 						</div>
 					</section>
 
 					<!-- Six -->
-						<section id="six" class="wrapper style1 fade-up">
+						<section id="six" class="wrapper style2 fade-up">
 							<div class="inner">
 								<div class="content">
 									<div class="inner">
@@ -116,21 +240,27 @@
 												</tr>
 											</table>
 											<h4>Why Self-Care is Important While Doing Social Change Work</h4>
-										<iframe width="1280" height="720" src="https://www.youtube.com/embed/aw_k_plx_CU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+												<div class="video-container">
+													<iframe width="1280" height="720" src="https://www.youtube.com/embed/aw_k_plx_CU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+												</div>
 											<h4>Teens Talk About Self-Care in High School</h4>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/gEHPTjMv4F0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h4>The Missing Ingredient in Self-Care</h4>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/Eupk56SG76M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<div class="video-container">
+												<iframe width="1280" height="720" src="https://www.youtube.com/embed/gEHPTjMv4F0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											</div>
+											<h4>The Missing Ingredient in Self-Care</h4>
+											<div class="video-container">
+												<iframe width="1280" height="720" src="https://www.youtube.com/embed/Eupk56SG76M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											</div>
+									</div>
 								</div>
 							</div>
-						</div>
 					</section>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
+						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
 					</ul>
 				</div>
 			</footer>
