--- a/activities.html
+++ b/activities.html
@@ -62,7 +62,7 @@
 				<div id="wrapper">
 
 					<!-- One -->
-						<section id="one" class="wrapper style1 fade-up">
+						<section id="one" class="wrapper style1-alt fade-up">
 							<div class="inner">
 								<div class="content">
 									<div class="inner">
@@ -83,7 +83,7 @@
 					</section>
 
 					<!-- Three -->
-					<section id="three" class="wrapper style3 fade-up">
+					<section id="three" class="wrapper style1-alt fade-up">
 						<div class="inner">
 							<h2>Action Planning Webinar</h2>
 							<p>Coming soon!</p>
@@ -99,7 +99,7 @@
 						</div>
 					</section>
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
+			<footer id="footer" class="wrapper style1">
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Social Changemakers. All rights reserved.</li><li>Design: <a href="http://harmony.ca">Harmony Movement</a></li>
